code-coverage build test for unit testing service and controller
note:
- add surefire to maven for unitTesting
- add failsafe to maven for integration test
- config pom file to use JaCoCo with those plugins